--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white_for_project">#FFFFFF</color>
     <color name="grey">#F7F8FC</color>
     <color name="dark_grey">#E1E3E9</color>
+    <color name="blue">#128FAE</color>
 </resources>
