--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,29 +10,29 @@
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
         android:src="@drawable/iv_main_fone" />
+
     <TextView
         android:id="@+id/tv_daily_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tv_daily_recipe"
         android:layout_centerInParent="true"
+        android:text="@string/tv_daily_recipe"
         android:textColor="@color/white_for_project"
-        android:textSize="24dp">
-    </TextView>
+        android:textSize="24sp"></TextView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Готовим с удовольствием!"
-        android:textColor="@color/white_for_project"
-        android:textSize="16dp"
         android:layout_below="@+id/tv_daily_recipe"
-        android:layout_centerInParent="true">
-    </TextView>
+        android:layout_centerInParent="true"
+        android:text="@string/with_pleasure"
+        android:textColor="@color/white_for_project"
+        android:textSize="16sp"></TextView>
     <Button
         android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Вход"
+        android:text="@string/entry"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
         style="@style/Widget.MaterialComponents.Button.TextButton"
