--- a/app/src/main/res/layout/activity_full_recipe.xml
+++ b/app/src/main/res/layout/activity_full_recipe.xml
@@ -4,31 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".FullRecipe">
+    tools:context=".FullRecipeActivity">
 
     <ImageButton
-        android:id="@+id/ib_back"
+        android:id="@+id/back_ibtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:backgroundTint="@color/white"
         android:src="@drawable/back" />
 
     <TextView
-        android:id="@+id/tv_type_of_meals"
+        android:id="@+id/tv_type_of_meals_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ib_back"
-        android:layout_marginLeft="24dp"
+        android:layout_below="@+id/back_ibtn"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:text="@string/breakfast"
         android:textColor="@color/blue" />
 
     <TextView
-        android:id="@+id/title_for_recipe"
+        android:id="@+id/title_for_recipe_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_type_of_meals"
-        android:layout_marginLeft="24dp"
+        android:layout_below="@+id/tv_type_of_meals_tv"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:text="@string/french_toast_with_strawberries"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -36,11 +36,11 @@
 
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/ratingBar_rb"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_for_recipe"
+        android:layout_below="@id/title_for_recipe_tv"
 
         android:layout_marginLeft="24dp"
         android:layout_marginTop="1dp"
@@ -50,66 +50,66 @@
         android:stepSize="0.1" />
 
     <ImageView
-        android:id="@+id/iv_watch"
+        android:id="@+id/watch_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ratingBar"
-        android:layout_marginLeft="24dp"
+        android:layout_below="@id/ratingBar_rb"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:src="@drawable/ic_watch"
-        android:layout_marginTop="16dp"></ImageView>
+        android:layout_marginTop="@dimen/miniMarginFromEdge"></ImageView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/iv_watch"
-        android:layout_marginTop="16dp"
+        android:layout_toRightOf="@id/watch_iv"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/_10_minutes"
-        android:layout_below="@id/ratingBar"
+        android:layout_below="@id/ratingBar_rb"
         android:textColor="@color/dark_grey"/>
 
     <ImageView
-        android:id="@+id/iv_fire"
+        android:id="@+id/fire_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/iv_watch"
-        android:layout_marginLeft="24dp"
+        android:layout_below="@id/watch_iv"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
         android:src="@drawable/ic_fire"
-        android:layout_marginTop="16dp"></ImageView>
+        android:layout_marginTop="@dimen/miniMarginFromEdge"></ImageView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/iv_watch"
-        android:layout_marginTop="16dp"
-        android:layout_toRightOf="@id/iv_fire"
+        android:layout_below="@id/watch_iv"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/fire_iv"
         android:text="@string/_500_calories"
         android:textColor="@color/dark_grey" />
 
     <androidx.appcompat.widget.AppCompatCheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_type_of_meals"
+        android:layout_below="@id/tv_type_of_meals_tv"
         android:layout_marginLeft="90dp"
-        android:layout_toRightOf="@id/title_for_recipe"
+        android:layout_toRightOf="@id/title_for_recipe_tv"
         android:button="@drawable/favorite_selector" />
 
     <ImageView
-        android:id="@+id/ib_image"
+        android:id="@+id/image_iv"
         android:layout_width="206dp"
         android:layout_height="125dp"
-        android:layout_below="@id/title_for_recipe"
+        android:layout_below="@id/title_for_recipe_tv"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
+        android:layout_marginRight="@dimen/middleMarginFromEdge"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_french_toasts" />
 
     <TextView
-        android:id="@+id/tx_ingredients"
+        android:id="@+id/ingredients_tx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ib_image"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_below="@id/image_iv"
+        android:layout_marginStart="@dimen/middleMarginFromEdge"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
 
         android:text="@string/ingredients"
         android:textColor="@color/black"
@@ -117,123 +117,123 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient1"
+        android:id="@+id/ingredient1_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
         android:src="@drawable/ic_spoon" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient2"
+        android:id="@+id/ingredient2_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/ib_ingredient1"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/ingredient1_ibtn"
         android:src="@drawable/ic_butter" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient3"
+        android:id="@+id/ingredient3_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/ib_ingredient2"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/ingredient2_ibtn"
         android:src="@drawable/ic_eggs" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient4"
+        android:id="@+id/ingredient4_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/ib_ingredient3"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/ingredient3_ibtn"
         android:src="@drawable/ic_glasses" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient5"
+        android:id="@+id/ingredient5_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/ib_ingredient4"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/ingredient4_ibtn"
         android:src="@drawable/ic_strawberries" />
 
     <ImageButton
-        android:id="@+id/ib_ingredient6"
+        android:id="@+id/ingredient6_ibtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_below="@id/tx_ingredients"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/ib_ingredient5"
+        android:layout_below="@id/ingredients_tx"
+        android:layout_marginLeft="@dimen/miniMarginFromEdge"
+        android:layout_toRightOf="@id/ingredient5_ibtn"
         android:src="@drawable/ic_berry" />
 
     <TextView
-        android:id="@+id/tv_step_by_step_recipe"
+        android:id="@+id/step_by_step_recipe_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ib_ingredient1"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/ingredient1_ibtn"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/step_by_step_recipe"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_step_1"
+        android:id="@+id/step_1_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_step_by_step_recipe"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/step_by_step_recipe_tv"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/step_1"
         android:textColor="@color/black"
 
         />
 
     <TextView
-        android:id="@+id/tv_step_2"
+        android:id="@+id/step_2_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_step_1"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/step_1_tv"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
+        android:layout_marginTop="@dimen/miniMarginFromEdge"
         android:text="@string/step_2"
         android:textColor="@color/black" />
 
 
     <TextView
-        android:id="@+id/tv_bon_appetite"
+        android:id="@+id/bon_appetite_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/b_back_2"
+        android:layout_above="@+id/back_2_btn"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
+        android:layout_marginBottom="@dimen/middleMarginFromEdge"
         android:text="@string/bon_appetite"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/iv_smile"
+        android:id="@+id/smile_iv"
         android:layout_width="21dp"
         android:layout_height="20dp"
-        android:layout_above="@+id/b_back_2"
-        android:layout_marginBottom="24dp"
-        android:layout_toRightOf="@id/tv_bon_appetite"
+        android:layout_above="@+id/back_2_btn"
+        android:layout_marginBottom="@dimen/middleMarginFromEdge"
+        android:layout_toRightOf="@id/bon_appetite_tv"
         android:src="@drawable/iv_smile" />
 
     <Button
-        android:id="@+id/b_back_2"
+        android:id="@+id/back_2_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="@dimen/middleMarginFromEdge"
+        android:layout_marginRight="@dimen/middleMarginFromEdge"
+        android:layout_marginBottom="@dimen/miniMarginFromEdge"
         android:text="@string/comeback" />
 
 
