--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="MainActivity">
 
     <ImageButton
-        android:id="@+id/ib_menu"
+        android:id="@+id/menu_ibtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -17,7 +17,7 @@
         />
 
     <ImageButton
-        android:id="@+id/ib_ring"
+        android:id="@+id/ring_ibtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -26,20 +26,20 @@
         android:src="@drawable/ic_notification" />
 
     <TextView
-        android:id="@+id/tv_hello_user"
+        android:id="@+id/hello_user_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ib_menu"
+        android:layout_below="@id/menu_ibtn"
         android:layout_marginLeft="24dp"
         android:text="@string/hello">
 
     </TextView>
 
     <TextView
-        android:id="@+id/tv_question_about_cook"
+        android:id="@+id/question_about_cook_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_hello_user"
+        android:layout_below="@id/hello_user_tv"
         android:layout_marginLeft="24dp"
         android:text="@string/question_about_what_will_you_cook"
         android:textColor="@color/black"
@@ -47,36 +47,36 @@
         android:textStyle="bold"></TextView>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tf_search"
+        android:id="@+id/search_tf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_question_about_cook"
+        android:layout_below="@id/question_about_cook_tv"
         android:hint="@string/start_your_search"
         app:hintTextColor="@color/dark_grey"
         app:startIconDrawable="@drawable/search">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_search"
+            android:id="@+id/search_tiet"
             android:layout_width="287dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp" />
+            android:layout_marginLeft="@dimen/bigMarginFromEdge"
+            android:layout_marginRight="@dimen/bigMarginFromEdge" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_question_about_cook"
+        android:layout_below="@id/question_about_cook_tv"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
 
         android:src="@drawable/ic_filter" />
 
     <TextView
-        android:id="@+id/tf_popular_recipe"
+        android:id="@+id/popular_recipe_tf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tf_search"
+        android:layout_below="@id/search_tf"
         android:layout_marginLeft="24dp"
         android:text="@string/popular_dishes"
         android:textColor="@color/black"
@@ -87,49 +87,49 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tf_search"
+        android:layout_below="@+id/search_tf"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="-3dp"
-        android:layout_toRightOf="@id/tf_popular_recipe"
+        android:layout_toRightOf="@id/popular_recipe_tf"
         android:text="@string/more"
         android:textColor="@color/orange"
         android:textSize="10sp" />
 
         <ImageButton
-            android:id="@+id/ib_recipe1"
+            android:id="@+id/recipe1_ibtn"
             android:layout_width="144dp"
             android:layout_height="86dp"
-            android:layout_below="@id/tf_popular_recipe"
+            android:layout_below="@id/popular_recipe_tf"
             android:layout_marginLeft="24dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_french_toasts"></ImageButton>
 
     <TextView
-        android:id="@+id/tv_type_of_meals"
+        android:id="@+id/tv_type_of_meals_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ib_recipe1"
+        android:layout_below="@id/recipe1_ibtn"
         android:layout_marginLeft="40dp"
         android:text="@string/breakfast"
         android:textColor="@color/blue"
         android:textSize="12dp" />
 
     <TextView
-        android:id="@+id/tv_title1"
+        android:id="@+id/title1_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_type_of_meals"
+        android:layout_below="@id/tv_type_of_meals_tv"
         android:layout_marginLeft="40dp"
         android:text="@string/french_toast_with_strawberries"
         android:textColor="@color/black"
         android:textSize="12dp" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/ratingBar_rb"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_title1"
+        android:layout_below="@id/title1_tv"
 
         android:layout_marginLeft="40dp"
         android:layout_marginTop="1dp"
@@ -139,10 +139,10 @@
         android:stepSize="0.1" />
 
         <ImageButton
-            android:id="@+id/ib_recipe2"
+            android:id="@+id/recipe2_ibtn"
             android:layout_width="144dp"
             android:layout_height="86dp"
-            android:layout_below="@id/tf_popular_recipe"
+            android:layout_below="@id/popular_recipe_tf"
             android:layout_alignParentRight="true"
             android:layout_marginRight="24dp"
 
@@ -152,30 +152,30 @@
         </ImageButton>
 
         <TextView
-            android:id="@+id/tv_type_of_meals_2"
+            android:id="@+id/type_of_meals_2_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ib_recipe2"
+            android:layout_below="@id/recipe2_ibtn"
             android:layout_marginLeft="265dp"
             android:text="@string/breakfast"
             android:textColor="@color/blue"
             android:textSize="12dp" />
         <TextView
-            android:id="@+id/tv_title2"
+            android:id="@+id/title2_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_type_of_meals_2"
+            android:layout_below="@id/type_of_meals_2_tv"
             android:layout_marginLeft="265dp"
             android:text="@string/cinnamon_sugar_toast"
             android:textColor="@color/black"
             android:textSize="12dp" />
 
         <RatingBar
-            android:id="@+id/ratingBar2"
+            android:id="@+id/ratingBar2_rb"
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_title2"
+            android:layout_below="@id/title2_tv"
             android:layout_marginLeft="265dp"
             android:layout_marginTop="1dp"
             android:layout_marginRight="3dp"
