--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -21,21 +21,21 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_daily_recipe_1"
+            android:id="@+id/daily_recipe_1_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/inform"
+            android:layout_above="@id/inform_tv"
             android:layout_centerInParent="true"
             android:text="@string/tv_daily_recipe"
             android:textColor="@color/white_for_project"
             android:textSize="24sp"></TextView>
 
         <TextView
-            android:id="@+id/inform"
+            android:id="@+id/inform_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_above="@id/tf_name"
+            android:layout_above="@id/name_tf"
             android:layout_centerInParent="true"
             android:layout_marginBottom="85dp"
             android:text="@string/registration"
@@ -44,7 +44,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tf_name"
+            android:id="@+id/name_tf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -53,49 +53,49 @@
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
+                android:id="@+id/name_tiet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp" />
+                android:layout_marginLeft="@dimen/bigMarginFromEdge"
+                android:layout_marginRight="@dimen/bigMarginFromEdge" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tf_email"
+            android:id="@+id/email_tf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tf_name"
+            android:layout_below="@+id/name_tf"
             android:hint="@string/email"
             app:startIconDrawable="@drawable/ic_email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email"
+                android:id="@+id/email_tiet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="@dimen/bigMarginFromEdge"
+                android:layout_marginRight="@dimen/bigMarginFromEdge"
                 android:inputType="textEmailAddress"
                 app:startIconDrawable="@drawable/ic_name" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tf_password"
+            android:id="@+id/password_tf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tf_email"
+            android:layout_below="@+id/email_tf"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
             app:startIconDrawable="@drawable/ic_password">
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password"
+                android:id="@+id/password_tiet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="@dimen/bigMarginFromEdge"
+                android:layout_marginRight="@dimen/bigMarginFromEdge"
                 android:inputType="textPassword" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -103,7 +103,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tf_password"
+            android:layout_below="@id/password_tf"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:text="@string/registration"></Button>
@@ -111,7 +111,7 @@
 
         <TextView
 
-            android:id="@+id/question"
+            android:id="@+id/question_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -122,12 +122,12 @@
             android:textSize="16sp"></TextView>
 
         <Button
-            android:id="@+id/btn_return_auto"
+            android:id="@+id/return_auto_btn"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/question"
+            android:layout_toRightOf="@id/question_tv"
             android:text="@string/sign_in"
             android:textColor="@color/orange"
             android:textSize="10sp"></Button>
