--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
+        android:id="@+id/filters_ibtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/question_about_cook_tv"
