--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_above="@id/name_tf"
+            android:layout_above="@id/name_til"
             android:layout_centerInParent="true"
             android:layout_marginBottom="85dp"
             android:text="@string/registration"
@@ -44,7 +44,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/name_tf"
+            android:id="@+id/name_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -62,10 +62,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_tf"
+            android:id="@+id/email_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name_tf"
+            android:layout_below="@+id/name_til"
             android:hint="@string/email"
             app:startIconDrawable="@drawable/ic_email">
 
@@ -81,10 +81,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password_tf"
+            android:id="@+id/password_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/email_tf"
+            android:layout_below="@+id/email_til"
             android:hint="@string/password"
             app:endIconMode="password_toggle"
             app:startIconDrawable="@drawable/ic_password">
@@ -103,7 +103,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/password_tf"
+            android:layout_below="@id/password_til"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:text="@string/registration"></Button>
